--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
           <a href="{% url 'store' %}" class="btn btn-outline-primary float-right"
             >Ver Todo</a
           >
-          <h3 class="section-title">Productos populares</h3>
+          <h3 class="section-title">Productos pxxxxxs</h3>
         </header>
         <!-- sect-heading -->
 
